# basic_cpp_project_structure

./: .gitignore  CMakeLists.txt  README.md  SetupProject.py  local_build.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/cpp_application/: CMakeLists.txt  main.cpp
src/sample/: CMakeLists.txt  main.cpp  sample.cpp  sample.hpp
src/second_sample/: CMakeLists.txt  main.cpp  sample_class.cpp  sample_class.hpp
test/sample/: CMakeLists.txt  test_main.cpp
